Mobile Safari overflow fix

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,6 +5,7 @@ html {
   -o-background-size: cover;
   background-size: cover;
   overflow: hidden;
+  position: fixed;
 }
 
 body {
